<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        app:cardUseCompatPadding="true"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="3dp">

        <LinearLayout
            android:id="@+id/llRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="64dp">

                <ImageView
                    android:id="@+id/song_logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="#16000000"
                    app:srcCompat="@drawable/baseline_music_note_24"
                    android:contentDescription="@string/song_logo" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginHorizontal="14dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:id="@+id/song_name"
                    android:ellipsize="end"
                    android:singleLine="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/song_artist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown_artist"
                        android:textColor="#7C7C7C"
                        android:singleLine="true"
                        android:maxWidth="185dp"
                        android:ellipsize="end"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="4dp"
                        />


                    <TextView
                        android:id="@+id/song_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#7C7C7C"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:text="@string/default_time"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>