<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewArt"
        app:layout_constraintVertical_bias="0.806">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:paddingVertical="12dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/unknown_artist"
            android:textColor="#7C7C7C"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewArt"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_above="@id/controls"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/music_icon_big"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#16000000"
            android:contentDescription="@string/song_logo"
            android:src="@drawable/baseline_music_note_24"
            />

    </androidx.cardview.widget.CardView>



    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumbTint="#009bff"
            android:progressTint="#009bff"/>

        <TextView
            android:id="@+id/currTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/default_time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="10dp"
            android:text="@string/default_time"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalTime"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="30dp">

            <ImageView
                android:id="@+id/previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_skip_previous_24" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_skip_next_24" />

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_pause_circle_outline_24" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>